--- a/Machi.kv
+++ b/Machi.kv
@@ -28,13 +28,8 @@ MDBoxLayout:
                     ScrollView:
                         do_scroll_x: False
                         do_scroll_y: True
-                        MDLabel:
-                            text:""
+                        MDList:
                             id: input_lister_text
-                            halign: "left"
-                            size_hint_y: None
-                            height: self.texture_size[1]
-                            text_size: self.width, None
                 MDGridLayout:
                     cols: 2
                     padding: 20
